# Virtual-Regional-Office

./: .gitignore  README.md
hypertension/: .env.test.env  .gitignore  ASL_Definition.json  GetDataForRecordID.py  Makefile  README.md  api-spec.yaml  aws-stepfunctions-local-credentials-sample.txt  cf-template-params-example.env  env-example.env  env-test.env  kms-key-policy-statements.json  pyproject.toml  samconfig-default.toml  sample_input.json  template.yaml
hypertension/.aws-sam/: build.toml
hypertension/dc-7101-algorithms/: Makefile  template.yaml
hypertension/dc-7101-algorithms/py-root/: pyproject.toml
hypertension/dc-7101-algorithms/py-root/lib/: bp_sufficiency.py  main.py  utils.py
hypertension/dc-7101-algorithms/py-root/test/: bp_history_test.py  bp_sufficiency_test.py  continous_medication_test.py  main_test.py  test_continous_medication.py  utils_test.py
hypertension/dc-7343-algorithms/: README.md
hypertension/dc-7343-algorithms/py-root/: app.py
hypertension/dc-7343-algorithms/py-root/lib/: main.py
hypertension/dc-7343-algorithms/py-root/test/: test_active_conditon.py  test_main.py  test_medication.py  test_procedure_match.py  test_utils.py
hypertension/docs/: CDW-access-instructions.docx  Connecting-to-CDW.docx  DSVA_Q&A_10132020.docx  DSVA_Q&A_10162020.docx  README.md  design-notes.md  vs-code.md
hypertension/functions/applicability_determiner/: app.py  pyproject.toml
hypertension/functions/applicability_determiner/tests/: test_applicability_determiner.py
hypertension/functions/claim_classifier/: app.py
hypertension/functions/claim_classifier/tests/: test_claim_classifier.py
hypertension/functions/medical_data_retriever/: BloodPressure.csv  Meds.csv  app.py  pyproject.toml  requirements.txt
hypertension/functions/medical_data_retriever/tests/: test_medical_data_retriever.py
hypertension/functions/medical_record_locator/: app.py
hypertension/functions/medical_record_locator/tests/: test_medical_record_locator.py
hypertension/functions/record_updater/: app.py
hypertension/functions/record_updater/tests/: test_record_uploader.py
hypertension/layers/: template.yaml
hypertension/layers/vro--python-dependencies-layer/: requirements.txt
hypertension/plan-1-py-lamb-from-scratch/: template.yaml
hypertension/plan-1-py-lamb-from-scratch/vro-main/: app.py  pyproject.toml
hypertension/plan-1-py-lamb-from-scratch/vro-main/src/: aws_secrets_manager.py  get_requests.py  main.py
hypertension/plan-1-py-lamb-from-scratch/vro-main/tests/: conftest.py  some_test.py
hypertension/plan-b/: Makefile  README.md  template-local.yaml  template.yaml
hypertension/plan-b/lambda/: app.py  pyproject.toml
hypertension/plan-b/lambda/tests/: test_plan_b.py
hypertension/plan-c/: README.md  cf-template-params-example.env  template.yaml
hypertension/plan-c/lambdaFunction/: lambdaHandler.js  package-lock.json  package.json
hypertension/py-root/: app.py  fetch_bp_data.py  fetch_cancer_data.py  get_token_make_api_request.py  pyproject.toml  set_parameter_overrides.py
hypertension/py-root/lib/: aws_secrets_manager.py  lighthouse.py  main.py  utils.py
hypertension/py-root/lib/pdf_templates/: pact_data_sheet.html
hypertension/py-root/lib/pdf_variables/: pact_data_sheet.json
hypertension/py-root/scripts/python_get_token_make_api_request_script/: assertion-params-example.json  get_token_make_api_request.py  observation-request-params-example.json  pyproject.toml
hypertension/py-root/test/: conftest.py  fake-custom-rsa-key.txt  fetch_bp_data_test.py  lighthouse_test.py  main_test.py  mock-rsa-key-private.pem  scripts_test.py  test_get_token_make_api_request.py  utils_test.py
hypertension/py-root/test/data/: env.py  lighthouse.py
hypertension/py-root/test/doubles/: aws_secrets_manager.py  filesystem_operations.py  get_token_make_api_request.py  lighthouse.py
hypertension/scripts/: export_aws_mfa_credentials.sh
hypertension/scripts/initial_deployment/: add_deployed_layers_to_template.py  download_wkhtmltopdf.py  establish_aws_mfa_session.py  initial_deployment.sh  pyproject.toml
hypertension/scripts/python-get-token-make-api-request-script/: assertion-params-example.json  assertion-params.json  get_token_make_api_request.py  observation-request-params.json  requirements.txt
hypertension/stack_deployment/: add_deployed_layers_to_template.py  establish_aws_mfa_session.py  pyproject.toml  requirements.txt
hypertension/statemachine/: hypertension.asl.json
hypertension/tests/: test_applicability_determiner.py  test_claim_classifier.py  test_medical_data_retriever.py  test_medical_record_locator.py  test_record_uploader.py  utils.py
hypertension/vro-main/: app.py  pdf-event.json  pyproject.toml  pytest.ini
hypertension/vro-main/layer/fonts/: .uuid
hypertension/vro-main/lib/: aws_secrets_manager.py  main.py  pdf_generator.py  utils.py
hypertension/vro-main/test/: conftest.py  fake-realistic-rsa-key.txt  main_test.py  pdf_generator_test.py  utils_test.py
hypertension/vro-main/test/doubles/: aws_secrets_manager.py
rapid_ready_for_decision/dc-7343-algorithms/py-root/: app.py  dc7343-1.0.2-resolved.yaml  dc7343-1.0.2-swagger.yaml  pyproject.toml  requirements.txt
rapid_ready_for_decision/dc-7343-algorithms/py-root/lib/: main.py
(+76 files in other folders)
