[tool.poetry]
name = "hypertension"
version = "1.0.0"
description = "Hypertension Decision Maker as part of the Virtual Regional Office"
authors = ["nathillardva <nathaniel.hillard@va.gov>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.0"
SQLAlchemy = "^1.3.22"
importlib-resources = "^4.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
coverage = "^5.3.1"
pytest-cov = "^2.10.1"
pylint = "^2.6.0"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
