[tool.poetry]
name = "vro-main"
version = "0.0.1"
description = "Virtual Regional Office Lambda Main"
authors = ["Aaron Houlihan <aaron@amida.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
