[tool.poetry]
name = "vro-main"
version = "0.0.1"
description = "Virtual Regional Office Lambda Main"
authors = ["Aaron Houlihan <aaron@amida.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.17.87"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
