[tool.poetry]
name = "app"
version = "0.1.0"
description = "Determines applicability of VRO"
authors = ["Nat Hillard <nathaniel.hillard@va.gov>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pylint = "^2.7.4"
autopep8 = "^1.5.6"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
