[tool.poetry]
name = "app"
version = "0.1.0"
description = "Determines applicability of VRO"
authors = ["Nat Hillard <nathaniel.hillard@va.gov>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
SQLAlchemy = "^1.4.4"
importlib-resources = "^5.1.2"
pytest-cov = "^2.11.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pylint = "^2.7.4"
autopep8 = "^1.5.6"
hypothesis = "^6.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
